2010-01-18
  - Added stub for #destroyed? method, since Rails associations now depend on it

2009-12-19
  - Added ActiveHash::Enum (John Pignata)
  - Deprecated include ActiveHash::Associations in favor of extend ActiveHash::Associations
  - Fixed bug where you can't set nil to an association
  - Calling #belongs_to now creates the underlying field if it's not already there (belongs_to :city will create the :city_id field)

2009-12-10
  - Fixed a bug where belongs_to associations would raise an error instead of returning
    nil when the parent object didn't exist.
  - Added #[] and #[]= accessors for more ActiveRecord-esque-ness. (Pat Nakajima & Dave Yeu)

2009-12-01
  - Add marked_for_destruction? to be compatible with nested attributes (Brandon Keene)
  - Added second parameter to respond_to? and cleaned up specs (Brian Takita)
  - Find with an id that does not exist now raises a RecordNotFound exception to mimic ActiveRecord (Pat Nakajima)

2009-10-22
  - added setters to ActiveHash::Base for all fields
  - instantiating an ActiveHash object with a hash calls the setter methods on the object
  - boolean default values now work

2009-10-21
  - Removed auto-reloading of files based on mtime - maybe it will come back later
  - Made ActiveFile::Base.all a bit more sane

2009-10-13
  - added ActiveHash::Base.has_many, which works with ActiveRecord or ActiveHash classes (thanks to baldwindavid)
  - added ActiveHash::Base.belongs_to, which works with ActiveRecord or ActiveHash classes (thanks to baldwindavid)
  - added .delete_all method that clears the in-memory array
  - added support for Hash-style yaml (think, Rails fixtures)
  - added setter for parent object on belongs_to ( city = City.new; city.state = State.first; city.state_id == State.first.id )

2009-10-12
  - auto-assign fields after calling data= instead of after calling .all
  - remove require 'rubygems', so folks with non-gem setups can still use AH