@@ -5,11 +5,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{active_hash}
-  s.version = "0.7.8"
+  s.version = "0.7.9"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Jeff Dean", "Mike Dalessio", "Corey Innis", "Peter Jaros", "Brandon Keene", "Brian Takita", "Pat Nakajima", "John Pignata"]
-  s.date = %q{2010-01-18}
+  s.date = %q{2010-03-01}
   s.email = %q{jeff@zilkey.com}
   s.extra_rdoc_files = [
     "LICENSE",
@@ -44,6 +44,19 @@ Gem::Specification.new do |s|
      "spec/spec_helper.rb"
   ]
   s.homepage = %q{http://github.com/zilkey/active_hash}
+  s.post_install_message = %q{NOTE: Breaking change!  Please change any extend statements to include statements:
+      
+      extend ActiveHash::Associations
+      extend ActiveHash::Enum
+  
+  becomes
+  
+      include ActiveHash::Associations
+      include ActiveHash::Enum
+
+  Sorry for the inconvenience.
+  
+}
   s.rdoc_options = ["--charset=UTF-8"]
   s.require_paths = ["lib"]
   s.rubygems_version = %q{1.3.5}
